--- a/src/app/doctor/components/doctor-principal/doctor-principal.component.html
+++ b/src/app/doctor/components/doctor-principal/doctor-principal.component.html
@@ -7,25 +7,25 @@
 
         <ul class="list-unstyled components">
             <li>
-                <a routerLink="/doctor-principal/home">Home</a>
+                <a routerLink="/doctor-principal/home" [routerLinkActive]="['is-active']">Home</a>
             </li>
             <li>
-                <a routerLink="/doctor-principal/agenda-doctor">Agenda</a>
+                <a routerLink="/doctor-principal/agenda-doctor" [routerLinkActive]="['is-active']">Agenda</a>
             </li>
             <li>
-                <a routerLink="/doctor-principal/citas-doctor">Citas</a>
+                <a routerLink="/doctor-principal/citas-doctor" [routerLinkActive]="['is-active']">Citas</a>
             </li>
             <li>
-                <a routerLink="/doctor-principal/facturacion-doctor">Facturación</a>
+                <a routerLink="/doctor-principal/facturacion-doctor" [routerLinkActive]="['is-active']">Facturación</a>
             </li>
             <li>
-                <a routerLink="/doctor-principal/patient-doctor">Pacientes</a>
+                <a routerLink="/doctor-principal/patient-doctor" [routerLinkActive]="['is-active']">Pacientes</a>
             </li>
             <li>
-                <a routerLink="/doctor-principal/settings-doctor">Perfil</a>
+                <a routerLink="/doctor-principal/settings-doctor" [routerLinkActive]="['is-active']">Perfil</a>
             </li>
             <li>
-                <a routerLink="/doctor-principal/reportes-doctor">Reportes</a>
+                <a routerLink="/doctor-principal/reportes-doctor" [routerLinkActive]="['is-active']">Reportes</a>
             </li>
             <li>
                 <a (click)=closeSession()>Salir</a>
