--- a/src/app/patient/components/patient-principal/patient-principal.component.html
+++ b/src/app/patient/components/patient-principal/patient-principal.component.html
@@ -7,25 +7,25 @@
 
         <ul class="list-unstyled components">
             <li>
-                <a routerLink="/patient-principal/home">Home</a>
+                <a routerLink="/patient-principal/home" [routerLinkActive]="['is-active']">Home</a>
             </li>
             <li>
-                <a routerLink="/patient-principal/agenda">Agenda</a>
+                <a routerLink="/patient-principal/agenda" [routerLinkActive]="['is-active']">Agenda</a>
             </li>
             <li>
-                <a routerLink="/patient-principal/citas">Citas</a>
+                <a routerLink="/patient-principal/citas" [routerLinkActive]="['is-active']">Citas</a>
             </li>
             <li>
-                <a routerLink="/patient-principal/chat">Chat</a>
+                <a routerLink="/patient-principal/chat" [routerLinkActive]="['is-active']">Chat</a>
             </li>
             <li>
-                <a routerLink="/patient-principal/products">Productos</a>
+                <a routerLink="/patient-principal/products" [routerLinkActive]="['is-active']">Productos</a>
             </li>
             <li>
-                <a routerLink="/patient-principal/perfil">Perfil</a>
+                <a routerLink="/patient-principal/perfil" [routerLinkActive]="['is-active']">Perfil</a>
             </li>
             <li>
-                <a routerLink="/patient-principal/servicios-medicos">Servicios Médicos</a>
+                <a routerLink="/patient-principal/servicios-medicos" [routerLinkActive]="['is-active']">Servicios Médicos</a>
             </li>
             <li>
                 <a (click)=closeSession()>Salir</a>
