--- a/src/app/doctor/components/citas-doctor/citas-doctor.component.html
+++ b/src/app/doctor/components/citas-doctor/citas-doctor.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <h2 class="text-center mb-5">Citas</h2>
+    <h2 class="text-center mb-5">{{strTitle}}</h2>
     <div class="row">
-        <div class="col-md-6 mb-3" *ngFor="let p of patientAppointments; let i = index">
+        <div class="col-md-4 mb-3" *ngFor="let p of patientAppointments; let i = index">
             <div class="card">
                 <!-- <img [src]="p.image" alt="John" style="width: 100%" /> -->
 
@@ -11,11 +11,58 @@
                 </h2>
                 <p>Precio: {{ p.price | currency: "COP " }}</p>
                 <p>Fecha: {{ p.date | date }}</p>
-                <a [routerLink]="['/doctor-principal/finalizar-cita', p.appointmentId]">
+                <a [routerLink]="['/doctor-principal/finalizar-cita', p.appointmentId]" *ngIf="p.state === 'A'">
                     <button class="btn bg-main btn-block text-white">
             Iniciar cita
           </button></a>
+                <button class="btn bg-main btn-block text-white" (click)="openCentrado(contenido, p)" *ngIf="p.state === 'I'">
+          Detalles de la cita
+        </button>
             </div>
         </div>
     </div>
 </div>
+
+<ng-template #contenido let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title">Detalles de la cita</h4>
+        <button class="close" aria-label="close" type="button" (click)="modal.dismiss()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="modal-body">
+        <div class="form-row">
+            <div class="form-group col-md-12">
+                <label for="descripcion">Descripción</label>
+                <textarea class="form-control" id="descripcion" readonly [ngModel]="citaModal.description"></textarea>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="motivo">Motivo</label>
+                <input type="text" class="form-control" id="motivo" readonly [ngModel]="citaModal.reason" />
+            </div>
+            <div class="form-group col-md-6">
+                <label for="fecha">Fecha</label>
+                <input type="text" class="form-control" id="fecha" readonly [ngModel]="citaModal.date | date" />
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="doctor">Paciente</label>
+                <input type="text" class="form-control" id="doctor" readonly [ngModel]="citaModal.firstName + ' ' + citaModal.lastName" />
+            </div>
+            <div class="form-group col-md-6">
+                <label for="costo">Costo</label>
+                <input type="text" class="form-control" id="costo" readonly [ngModel]="citaModal.price | currency: 'COP '" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-md-12">
+                <button class="btn bg-main text-white btn-block" type="button" (click)="generarPdfCita(citaModal.appointmentId)">
+          Descargar reporte
+        </button>
+            </div>
+        </div>
+    </div>
+</ng-template>
