--- a/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
+++ b/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
@@ -8,40 +8,17 @@
                 <a class="btn btn-primary mb-3 mr-1" href="#carouselExampleIndicators2" role="button" data-slide="prev">
                     <i class="fa fa-arrow-left"></i>
                 </a>
-                <a class="btn btn-primary mb-3" href="#carouselExampleIndicators2" role="button" data-slide="next">
+                <a class="btn btn-primary mb-3" href="#carouselExampleIndicators2" role="button" data-slide="next" (click)="prueba($event)">
                     <i class="fa fa-arrow-right"></i>
                 </a>
             </div>
             <div class="col-12">
                 <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="carousel-item" *ngFor="let ad of arrayDiv; let in = index; let isFirst = first" [ngClass]="{ active: isFirst }">
                             <div class="row">
                                 <div class="col-md-4 mb-3" *ngFor="let d of doctors; let i = index">
-                                    <div class="card" *ngIf="i < 3">
-                                        <img [src]="d.image" alt="John" style="width: 100%" />
-                                        <h1>
-                                            {{ d.firstName + " " + d.lastName }}
-                                        </h1>
-                                        <p class="title">{{ d.description }}</p>
-                                        <p>{{ d.price | currency: "COP " }}</p>
-                                        <p>
-                                            <i class="fas fa-star" *ngFor="let dd of [].constructor(d.reputation)"></i>
-                                            <i class="fas fa-star" style="color: rgb(182, 169, 169)" *ngFor="let dd of [].constructor(5 - d.reputation)"></i>
-                                        </p>
-                                        <p>
-                                            <button class="card_button bg-main" (click)="openCentrado(contenido, d)">
-                        Solicitar cita
-                      </button>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item" *ngIf="division > 1">
-                            <div class="row">
-                                <div class="col-md-4 mb-3" *ngFor="let d of doctors; let i = index">
-                                    <div class="card" *ngIf="i > 2">
+                                    <div class="card" *ngIf="i > ad && i < (in + 1) * 3">
                                         <img [src]="d.image" alt="John" style="width: 100%" />
                                         <h1>
                                             {{ d.firstName + " " + d.lastName }}
