--- a/src/app/doctor/components/facturacion-doctor/facturacion-doctor.component.html
+++ b/src/app/doctor/components/facturacion-doctor/facturacion-doctor.component.html
@@ -1,39 +1,42 @@
-
-<h2 class="text-center mb-4">{{strTitle}}</h2>
+<h2 class="text-center mb-4">{{ strTitle }}</h2>
 <div class="row mb-4">
     <div class="col-1"></div>
-    <div class="card col-3 mx-3" style="width: 16rem;" *ngFor="let member of subscriptions">
+    <div class="card col-3 mx-3" style="width: 16rem" *ngFor="let member of subscriptions | async">
         <div class="card-body text-center">
-          <h5 class="card-title">{{member.name}}</h5>
-          <p class="card-text">{{member.description}}</p>
-          <p class="card-text">Precio: {{member.price | currency:'COP'}}</p>
+            <h5 class="card-title">{{ member.name }}</h5>
+            <p class="card-text">{{ member.description }}</p>
+            <p class="card-text">Precio: {{ member.price | currency: "COP" }}</p>
         </div>
-      </div>
+    </div>
 </div>
 
 <form>
-    <div class=" form-group row ">
+    <div class="form-group row">
         <div class="col-1"></div>
-        <label class="col-2 col-form-label ">Tipo de membresía</label>
+        <label class="col-2 col-form-label">Tipo de membresía</label>
         <div class="col-8">
-            <select  class="custom-select" name="subscription" [(ngModel)]="purchase.subscription" #subscription="ngModel" required>
-                <option *ngFor="let subs of subscriptions" value="{{subs.subscriptionId}}">{{subs.name}}</option>
-                    </select>
-            <div class="alert alert-danger p-0" *ngIf="subscription.invalid && (subscription.dirty || subscription.touched)">
+            <select class="custom-select" name="subscription" [(ngModel)]="purchase.subscription" #subscription="ngModel" required>
+        <option
+          *ngFor="let subs of subscriptions | async"
+          value="{{ subs.subscriptionId }}"
+        >
+          {{ subs.name }}
+        </option>
+      </select>
+            <div class="alert alert-danger p-0" *ngIf="
+          subscription.invalid && (subscription.dirty || subscription.touched)
+        ">
                 <div *ngIf="subscription.errors.required">
                     El tipo de membresía es requerido
                 </div>
-
-
             </div>
-
         </div>
     </div>
-    <div class=" form-group row ">
+    <div class="form-group row">
         <div class="col-1"></div>
-        <label class="col-2 col-form-label ">Número de tarjeta</label>
+        <label class="col-2 col-form-label">Número de tarjeta</label>
         <div class="col-8">
-            <input class="form-control " type="text" placeholder="Número de tarjeta" name="cardNumber" [(ngModel)]="purchase.cardNumber" required minlength="16" maxlength="19" #cardNumber="ngModel">
+            <input class="form-control" type="text" placeholder="Número de tarjeta" name="cardNumber" [(ngModel)]="purchase.cardNumber" required minlength="16" maxlength="19" #cardNumber="ngModel" />
             <div class="alert alert-danger p-0" *ngIf="cardNumber.invalid && (cardNumber.dirty || cardNumber.touched)">
                 <div *ngIf="cardNumber.errors.required">
                     El número de la tarjeta es requerido
@@ -41,69 +44,55 @@
                 <div *ngIf="cardNumber.errors.minlength">
                     El número de la tarjeta debe tener 16 digitos
                 </div>
-
             </div>
-
-
-
         </div>
     </div>
-    <div class=" form-group row ">
+    <div class="form-group row">
         <div class="col-1"></div>
-        <label class="col-2 col-form-label ">Tipo de tarjeta</label>
+        <label class="col-2 col-form-label">Tipo de tarjeta</label>
         <div class="col-8">
-            <select  class="custom-select" name="cardType" [(ngModel)]="purchase.cardType" #cardType="ngModel" required>
-                <option *ngFor="let payment of payments" value="{{payment.payId}}">{{payment.name}}</option>
-                    </select>
+            <select class="custom-select" name="cardType" [(ngModel)]="purchase.cardType" #cardType="ngModel" required>
+        <option *ngFor="let payment of payments" value="{{ payment.payId }}">
+          {{ payment.name }}
+        </option>
+      </select>
             <div class="alert alert-danger p-0" *ngIf="cardType.invalid && (cardType.dirty || cardType.touched)">
                 <div *ngIf="cardType.errors.required">
                     El tipo de tarjeta es requerido
                 </div>
-
-
             </div>
-
         </div>
     </div>
-    <div class=" form-group row ">
+    <div class="form-group row">
         <div class="col-1"></div>
-        <label class="col-2 col-form-label ">Fecha de expiración</label>
-        <div class="col-8 ">
-            <input class="form-control " type="date" name="expirationDate" [(ngModel)]="purchase.expirationDate" required #expirationDate="ngModel">
-            <div class="alert alert-danger p-0" *ngIf="expirationDate.invalid && (expirationDate.dirty || expirationDate.touched)">
+        <label class="col-2 col-form-label">Fecha de expiración</label>
+        <div class="col-8">
+            <input class="form-control" type="date" name="expirationDate" [(ngModel)]="purchase.expirationDate" required #expirationDate="ngModel" />
+            <div class="alert alert-danger p-0" *ngIf="
+          expirationDate.invalid &&
+          (expirationDate.dirty || expirationDate.touched)
+        ">
                 <div *ngIf="expirationDate.errors.required">
                     La fecha de expiración es requerida
                 </div>
-
-
             </div>
         </div>
     </div>
-    <div class=" form-group row ">
+    <div class="form-group row">
         <div class="col-1"></div>
-        <label class="col-2 col-form-label ">CVV</label>
+        <label class="col-2 col-form-label">CVV</label>
         <div class="col-8">
-
-            <input class="form-control " type="password" placeholder="CVV" name="cvv" [(ngModel)]="purchase.password" required minlength="4" maxlength="4" #cvv="ngModel">
+            <input class="form-control" type="password" placeholder="CVV" name="cvv" [(ngModel)]="purchase.password" required minlength="4" maxlength="4" #cvv="ngModel" />
             <div class="alert alert-danger p-0" *ngIf="cvv.invalid && (cvv.dirty || cvv.touched)">
-                <div *ngIf="cvv.errors.required">
-                    El CVV es requerido
-                </div>
-                <div *ngIf="cvv.errors.minlength">
-                    El CVV debe tener 4 caracteres
-                </div>
-
+                <div *ngIf="cvv.errors.required">El CVV es requerido</div>
+                <div *ngIf="cvv.errors.minlength">El CVV debe tener 4 caracteres</div>
             </div>
-
-
-
         </div>
     </div>
-    <div class="form-group row ">
-        <label class="col-3 col-form-label ">&nbsp;</label>
-        <div class="input-group col-md-8 ">
-            <button class="btn btn-block bg-main text-white" >Pagar</button>
-
+    <div class="form-group row">
+        <label class="col-3 col-form-label">&nbsp;</label>
+        <div class="input-group col-md-8">
+            <button class="btn btn-block bg-main text-white">Pagar</button>
         </div>
     </div>
 </form>
