--- a/src/app/patient/components/patient-principal/patient-principal.component.html
+++ b/src/app/patient/components/patient-principal/patient-principal.component.html
@@ -15,9 +15,9 @@
             <li>
                 <a routerLink="/patient-principal/citas" [routerLinkActive]="['is-active']">Citas</a>
             </li>
-            <li>
+            <!-- <li>
                 <a routerLink="/patient-principal/chat" [routerLinkActive]="['is-active']">Chat</a>
-            </li>
+            </li> -->
             <li>
                 <a routerLink="/patient-principal/products" [routerLinkActive]="['is-active']">Productos</a>
             </li>
@@ -57,9 +57,9 @@
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/patient-principal/citas">Citas</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" routerLink="/patient-principal/chat">Chat</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/patient-principal/products">Productos</a>
                         </li>
