visualizacioon pacientes en perfil del doctor

--- a/src/app/admin/components/admin-principal/admin-principal.component.html
+++ b/src/app/admin/components/admin-principal/admin-principal.component.html
@@ -7,7 +7,7 @@
 
         <ul class="list-unstyled components">
             <li>
-                <a routerLink="/admin-principal/home" [routerLinkActive]="['is-active']">Home</a
+                <a routerLink="/admin-principal/home" [routerLinkActive]="['is-active']">Inicio</a
         >
       </li>
       <li>
@@ -70,7 +70,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/admin-principal/home">Home</a>
+                            <a class="nav-link" routerLink="/admin-principal/home">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/admin-principal/doctor-admin">Doctores</a
