--- a/src/app/doctor/components/citas-doctor/citas-doctor.component.html
+++ b/src/app/doctor/components/citas-doctor/citas-doctor.component.html
@@ -5,7 +5,7 @@
             <div class="card">
                 <!-- <img [src]="p.image" alt="John" style="width: 100%" /> -->
 
-                <h3>{{ p.description }}</h3>
+                <h3>{{ p.reason }}</h3>
                 <h2 class="title">
                     {{ p.firstName + " " + p.lastName }}
                 </h2>
