--- a/src/app/doctor/components/doctor-principal/doctor-principal.component.html
+++ b/src/app/doctor/components/doctor-principal/doctor-principal.component.html
@@ -7,7 +7,7 @@
 
         <ul class="list-unstyled components">
             <li>
-                <a routerLink="/doctor-principal/home" [routerLinkActive]="['is-active']">Home</a>
+                <a routerLink="/doctor-principal/home" [routerLinkActive]="['is-active']">Inicio</a>
             </li>
             <li>
                 <a routerLink="/doctor-principal/agenda-doctor" [routerLinkActive]="['is-active']">Agenda</a>
@@ -49,7 +49,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" routerLink="/doctor-principal/home">Home</a>
+                            <a class="nav-link" routerLink="/doctor-principal/home">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/doctor-principal/agenda-doctor">Agenda</a>
