--- a/src/app/patient/components/patient-principal/patient-principal.component.html
+++ b/src/app/patient/components/patient-principal/patient-principal.component.html
@@ -7,7 +7,7 @@
 
         <ul class="list-unstyled components">
             <li>
-                <a routerLink="/patient-principal/home" [routerLinkActive]="['is-active']">Home</a>
+                <a routerLink="/patient-principal/home" [routerLinkActive]="['is-active']">Inicio</a>
             </li>
             <li>
                 <a routerLink="/patient-principal/agenda" [routerLinkActive]="['is-active']">Agenda</a>
@@ -49,7 +49,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" routerLink="/patient-principal/home">Home</a>
+                            <a class="nav-link" routerLink="/patient-principal/home">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/patient-principal/agenda">Agenda</a>
