--- a/src/app/admin/components/admin-principal/admin-principal.component.html
+++ b/src/app/admin/components/admin-principal/admin-principal.component.html
@@ -109,7 +109,7 @@
     </nav>
 
     <!-- <h2>Collapsible </h2> -->
-    <div class="cotainer">
+    <div class="container">
       <router-outlet></router-outlet>
     </div>
   </div>
