--- a/src/app/doctor/components/doctor-principal/doctor-principal.component.html
+++ b/src/app/doctor/components/doctor-principal/doctor-principal.component.html
@@ -129,7 +129,7 @@
         </nav>
 
         <!-- <h2>Collapsible </h2> -->
-        <div class="cotainer">
+        <div class="container">
             <router-outlet></router-outlet>
         </div>
     </div>
