--- a/src/app/patient/components/patient-principal/patient-principal.component.html
+++ b/src/app/patient/components/patient-principal/patient-principal.component.html
@@ -113,7 +113,7 @@
         </nav>
 
         <!-- <h2>Collapsible </h2> -->
-        <div class="cotainer">
+        <div class="container">
             <router-outlet></router-outlet>
         </div>
     </div>
