--- a/src/app/shared/components/chat-aside/chat-aside.component.css
+++ b/src/app/shared/components/chat-aside/chat-aside.component.css
@@ -1,6 +1,6 @@
 aside {
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: inline-block;
     font-size: 15px;
     vertical-align: top;
@@ -11,7 +11,7 @@ aside ul {
     padding-left: 0;
     margin: 0;
     list-style-type: none;
-    height: 690px;
+    height: 300px;
 }
 
 aside li {
