--- a/src/app/shared/components/chat-content/chat-content.component.css
+++ b/src/app/shared/components/chat-content/chat-content.component.css
@@ -14,7 +14,7 @@
 
 main {
     width: 100%;
-    height: 100vh;
+    height: auto;
     font-size: 15px;
     vertical-align: top;
 }
@@ -60,13 +60,23 @@ main header h3 {
     font-weight: normal;
     color: #7e818a;
 }
+.sc-text-area{
+    resize: none;
+}
+.sc-button-send{
+    padding-top: 10px;
+}
+.sc-button{
+    background-color: #3e84b8;
+    color: white;
 
+}
 #chat {
     padding-left: 0;
     margin: 0;
     list-style-type: none;
     overflow-y: scroll;
-    height: 535px;
+    height: 300px;
     border-top: 2px solid #fff;
     border-bottom: 2px solid #fff;
 }
